feat: set up random quote endpoint
