# packages/openapi/src/gen/handlers/getRandomQuoteHandler.ts
@@ -1,0 +1,31 @@
+/**
+* Generated by Kubb (https://kubb.dev/).
+* Do not edit manually.
+*/
+
+import type { GetRandomQuoteQueryResponse } from "../types/GetRandomQuote.ts";
+import { http } from "msw";
+
+export function getRandomQuoteHandlerResponse200(data: GetRandomQuoteQueryResponse) {
+  return new Response(JSON.stringify(data), {
+    status: 200,
+      headers: {
+      'Content-Type': 'application/json'
+    },
+  })
+}
+
+export function getRandomQuoteHandler(data?: GetRandomQuoteQueryResponse | ((
+        info: Parameters<Parameters<typeof http.get>[1]>[0],
+      ) => Response | Promise<Response>)) {
+  return http.get('/quotes/random', function handler(info) {
+    if(typeof data === 'function') return data(info)
+
+    return new Response(JSON.stringify(data), {
+      status: 200,
+        headers: {
+        'Content-Type': 'application/json'
+      },
+    })
+  })
+}
