# packages/openapi/src/gen/types/GetRandomQuote.ts
@@ -1,0 +1,18 @@
+/**
+* Generated by Kubb (https://kubb.dev/).
+* Do not edit manually.
+*/
+
+import type { Quote } from "./Quote.ts";
+
+/**
+ * @description Random quote retrieved successfully
+*/
+export type GetRandomQuote200 = Quote;
+
+export type GetRandomQuoteQueryResponse = GetRandomQuote200;
+
+export type GetRandomQuoteQuery = {
+    Response: GetRandomQuote200;
+    Errors: any;
+};
